# chuck

./: .dockerignore  .env  .env.dev  .env.test  .gitignore  Dockerfile  README.md  compose.override.yaml  compose.prod.yaml  compose.yaml  composer.json  package-lock.json
.github/workflows/: ci.yaml
ai-service/: .env.example  Dockerfile  pyproject.toml
ai-service/app/: config.py  main.py  schemas.py  security.py
ai-service/app/providers/: __init__.py  base.py  fake_backend.py  openai_backend.py
ai-service/tests/: conftest.py  test_auth.py  test_complete.py  test_embeddings.py  test_health.py
assets/: app.js
assets/controllers/: avatar_dropzone_controller.js  confirm_controller.js  explain_controller.js  like_controller.js  nav_toggle_controller.js  reaction_controller.js  share_controller.js
config/: bundles.php  reference.php  services.yaml
docker/backup/: backup.sh
docker/nginx/: default.conf
mcp-server/: .env.example  pyproject.toml
mcp-server/app/: client.py  config.py  models.py  server.py
mcp-server/tests/: conftest.py  test_client.py  test_server.py
migrations/: Version20240405074652.php  Version20240405081111.php  Version20260721112153.php  Version20260721120000.php  Version20260721130000.php  Version20260721140000.php  Version20260721150000.php  Version20260721160000.php  Version20260721170000.php  Version20260721180000.php  Version20260721190000.php  Version20260721200000.php  Version20260722105742.php  Version20260722112234.php  Version20260722113759.php  Version20260722120521.php
templates/: base.html.twig
tests/: SecurityHeadersTest.php
(+119 files in other folders)
