[project]
name = "chuckify-ai-service"
version = "0.1.0"
description = "Internal AI service (embeddings + completions) for the Chuckify app."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "openai>=1.40",
    "jsonschema>=4.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008 (function call in a default argument) is FastAPI's core idiom for Depends() -
# flagging it project-wide would just mean noqa-ing every route/dependency signature.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
